# bamreligion

./: .gitmodules  CMakeLists.txt  README.md  build_deps.sh
src/: BamfileIO.cpp  BamfileIO.h  PileupUtils.cpp  PileupUtils.h  Utils.cpp  Utils.h  main.cpp
tests/: CMakeLists.txt
tests/data/: CMakeLists.txt  query.bam  subject.bam
tests/testsrc/: CMakeLists.txt  test.cpp
